// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDialog /> should match snapshot 1`] = `
<AddDialog
  focusTrapPaused={false}
  onSubmit={[MockFunction]}
>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    >
      <div
        className="main"
      >
        <label
          className="label"
          htmlFor="identifierList"
        >
          DOI/PMID/PMCID
        </label>
        <input
          className="input"
          id="identifierList"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
    </IdentifierInput>
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  >
    <ActionBar>
      <div
        className="actionBar"
      >
        <Button
          flat={true}
          focusable={true}
          label="Add Manually"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              onClick={[Function]}
              type="button"
            >
              Add Manually
            </button>
          </div>
        </Button>
        <Button
          disabled={false}
          flat={true}
          focusable={true}
          label="Search PubMed"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Search PubMed
            </button>
          </div>
        </Button>
        <Component>
          <span
            className="separator"
          />
        </Component>
        <ToggleSwitch
          checked={true}
          disabled={false}
          onChange={[Function]}
          tooltip={
            Object {
              "position": "left",
              "text": "Insert citation inline",
            }
          }
        >
          <div
            className="toggle"
          >
            <Tooltip
              active={false}
              id="inline-toggle"
              text="Insert citation inline"
              transform=""
            >
              <div
                className="tooltip"
                id="inline-toggle"
                role="tooltip"
                style={
                  Object {
                    "transform": "",
                  }
                }
              >
                Insert citation inline
              </div>
            </Tooltip>
            <input
              aria-checked={true}
              aria-describedby="inline-toggle"
              aria-label="Insert citation inline"
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-checked={true}
              aria-disabled={false}
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="checkbox"
            />
          </div>
        </ToggleSwitch>
        <Button
          focusable={true}
          form="add-reference"
          label="Add Reference"
          primary={true}
          type="submit"
        >
          <div>
            <button
              className="btn btnFocusable btnPrimary"
              form="add-reference"
              type="submit"
            >
              Add Reference
            </button>
          </div>
        </Button>
      </div>
    </ActionBar>
  </ButtonRow>
</AddDialog>
`;

exports[`<AddDialog /> should match snapshot 2`] = `
<AddDialog
  focusTrapPaused={false}
  onSubmit={[MockFunction]}
>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <ManualInput
      errorMessage={""}
      manualData={
        Object {
          "type": "webpage",
        }
      }
      onAutoCite={[Function]}
      onTypeChange={[Function]}
      people={
        Array [
          Object {
            "family": "",
            "given": "",
            "literal": "",
            "type": "author",
          },
        ]
      }
    >
      <div
        className="typeSelect"
      >
        <label
          className="label"
          htmlFor="type-select"
        >
          Citation Type
        </label>
        <select
          className="select"
          id="type-select"
          onChange={[Function]}
          value="webpage"
        >
          <option
            aria-selected={false}
            value="bill"
          >
            Bill
          </option>
          <option
            aria-selected={false}
            value="book"
          >
            Book
          </option>
          <option
            aria-selected={false}
            value="chapter"
          >
            Book Section
          </option>
          <option
            aria-selected={false}
            value="legal_case"
          >
            Case
          </option>
          <option
            aria-selected={false}
            value="paper-conference"
          >
            Conference Proceeding
          </option>
          <option
            aria-selected={false}
            value="entry-encyclopedia"
          >
            Encyclopedia Entry
          </option>
          <option
            aria-selected={false}
            value="motion_picture"
          >
            Film
          </option>
          <option
            aria-selected={false}
            value="speech"
          >
            Hearing
          </option>
          <option
            aria-selected={false}
            value="article-journal"
          >
            Journal Article
          </option>
          <option
            aria-selected={false}
            value="article-magazine"
          >
            Magazine Article
          </option>
          <option
            aria-selected={false}
            value="article-newspaper"
          >
            Newspaper Article
          </option>
          <option
            aria-selected={false}
            value="patent"
          >
            Patent
          </option>
          <option
            aria-selected={false}
            value="testing"
          >
            Test not in use
          </option>
          <option
            aria-selected={false}
            value="testing2"
          >
            Test not in use
          </option>
          <option
            aria-selected={false}
            value="report"
          >
            Report
          </option>
          <option
            aria-selected={false}
            value="legislation"
          >
            Statute
          </option>
          <option
            aria-selected={false}
            value="thesis"
          >
            Thesis
          </option>
          <option
            aria-selected={false}
            value="broadcast"
          >
            Television Broadcast
          </option>
          <option
            aria-selected={true}
            value="webpage"
          >
            Web Page
          </option>
        </select>
      </div>
      <AutoCite
        getter={[Function]}
        kind="webpage"
        placeholder="URL"
      >
        <div
          className="autocite"
        >
          <label
            htmlFor="citequery"
          >
            Autocite
          </label>
          <input
            className="input"
            id="citequery"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="URL"
            type="url"
            value=""
          />
          <Button
            disabled={true}
            flat={true}
            label="Search"
            onClick={[Function]}
            type="button"
          >
            <div>
              <button
                className="btn btnFlat"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </Button>
        </div>
      </AutoCite>
      <div
        className="scrollBoundaryAutocite"
        onWheel={[Function]}
      >
        <Callout
          intent="danger"
          isVisible={true}
          onDismiss={[Function]}
        />
        <ContributorList
          citationType="webpage"
          people={
            Array [
              Object {
                "family": "",
                "given": "",
                "literal": "",
                "type": "author",
              },
            ]
          }
        >
          <h2
            className="heading"
          >
            Contributors
          </h2>
          <Contributor
            contributor={
              Object {
                "family": "",
                "given": "",
                "literal": "",
                "type": "author",
              }
            }
            contributorTypes={
              Array [
                Object {
                  "label": "Author",
                  "type": "author",
                },
              ]
            }
            index={0}
            onRemove={[Function]}
          >
            <div
              className="contributor"
            >
              <select
                data-field="type"
                onChange={[Function]}
                value="author"
              >
                <option
                  aria-selected={true}
                  value="author"
                >
                  Author
                </option>
              </select>
              <input
                aria-label="Surname"
                data-field="family"
                onChange={[Function]}
                placeholder="Surname"
                required={true}
                type="text"
                value=""
              />
              <input
                aria-label="Given Name, M.I."
                data-field="given"
                onChange={[Function]}
                placeholder="Given Name, M.I."
                required={true}
                type="text"
                value=""
              />
              <Button
                flat={true}
                icon="admin-users"
                label="Toggle literal name"
                onClick={[Function]}
                type="button"
              >
                <div>
                  <button
                    aria-label="Toggle literal name"
                    className="btn btnFlat btnIcon"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="dashicons dashicons-admin-users"
                    />
                  </button>
                </div>
              </Button>
              <Button
                data-index={0}
                flat={true}
                icon="no-alt"
                label="Remove contributor"
                onClick={[Function]}
                type="button"
              >
                <div>
                  <button
                    aria-label="Remove contributor"
                    className="btn btnFlat btnIcon"
                    data-index={0}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="dashicons dashicons-no-alt"
                    />
                  </button>
                </div>
              </Button>
            </div>
          </Contributor>
          <div
            className="btnRow"
          >
            <Button
              flat={true}
              label="Add contributor"
              onClick={[Function]}
              type="button"
            >
              <div>
                <button
                  className="btn btnFlat"
                  onClick={[Function]}
                  type="button"
                >
                  Add contributor
                </button>
              </div>
            </Button>
          </div>
        </ContributorList>
        <MetaFields
          meta={
            Object {
              "type": "webpage",
            }
          }
        >
          <h2
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Web Page
          </h2>
          <div
            style={
              Object {
                "display": "table",
                "padding": 10,
                "width": "100%",
              }
            }
          >
            <Field
              field={
                Object {
                  "label": "Content Title",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "title",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="title"
                >
                  Content Title
                </label>
                <input
                  className="input"
                  id="title"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Website Title",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "container-title",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="container-title"
                >
                  Website Title
                </label>
                <input
                  className="input"
                  id="container-title"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "URL",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "URL",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="URL"
                >
                  URL
                </label>
                <input
                  className="input"
                  id="URL"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Date",
                  "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
                  "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
                  "required": false,
                  "value": "issued",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="issued"
                >
                  Date
                </label>
                <input
                  className="input"
                  id="issued"
                  onChange={[Function]}
                  pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
                  placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Date Accessed",
                  "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
                  "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
                  "required": false,
                  "value": "accessed",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="accessed"
                >
                  Date Accessed
                </label>
                <input
                  className="input"
                  id="accessed"
                  onChange={[Function]}
                  pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
                  placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </Field>
          </div>
        </MetaFields>
      </div>
    </ManualInput>
  </form>
  <ButtonRow
    addManually={true}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  >
    <ActionBar>
      <div
        className="actionBar"
      >
        <Button
          flat={true}
          focusable={true}
          label="Add with Identifier"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              onClick={[Function]}
              type="button"
            >
              Add with Identifier
            </button>
          </div>
        </Button>
        <Button
          disabled={true}
          flat={true}
          focusable={true}
          label="Search PubMed"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Search PubMed
            </button>
          </div>
        </Button>
        <Component>
          <span
            className="separator"
          />
        </Component>
        <ToggleSwitch
          checked={true}
          disabled={false}
          onChange={[Function]}
          tooltip={
            Object {
              "position": "left",
              "text": "Insert citation inline",
            }
          }
        >
          <div
            className="toggle"
          >
            <Tooltip
              active={false}
              id="inline-toggle"
              text="Insert citation inline"
              transform=""
            >
              <div
                className="tooltip"
                id="inline-toggle"
                role="tooltip"
                style={
                  Object {
                    "transform": "",
                  }
                }
              >
                Insert citation inline
              </div>
            </Tooltip>
            <input
              aria-checked={true}
              aria-describedby="inline-toggle"
              aria-label="Insert citation inline"
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-checked={true}
              aria-disabled={false}
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="checkbox"
            />
          </div>
        </ToggleSwitch>
        <Button
          focusable={true}
          form="add-reference"
          label="Add Reference"
          primary={true}
          type="submit"
        >
          <div>
            <button
              className="btn btnFocusable btnPrimary"
              form="add-reference"
              type="submit"
            >
              Add Reference
            </button>
          </div>
        </Button>
      </div>
    </ActionBar>
  </ButtonRow>
</AddDialog>
`;

exports[`<AddDialog /> should match snapshot 3`] = `
<AddDialog
  focusTrapPaused={false}
  onSubmit={[MockFunction]}
>
  <Spinner
    bgColor="transparent"
    overlay={true}
    size="40px"
  >
    <div
      className="spinner spinnerOverlay"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      <svg
        height="40px"
        viewBox="0 0 66 66"
        width="40px"
      >
        <circle
          cx="33"
          cy="33"
          fill="none"
          r="30"
          strokeLinecap="round"
          strokeWidth="6"
        />
      </svg>
    </div>
  </Spinner>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <ManualInput
      errorMessage={""}
      manualData={
        Object {
          "type": "webpage",
        }
      }
      onAutoCite={[Function]}
      onTypeChange={[Function]}
      people={
        Array [
          Object {
            "family": "",
            "given": "",
            "literal": "",
            "type": "author",
          },
        ]
      }
    >
      <div
        className="typeSelect"
      >
        <label
          className="label"
          htmlFor="type-select"
        >
          Citation Type
        </label>
        <select
          className="select"
          id="type-select"
          onChange={[Function]}
          value="webpage"
        >
          <option
            aria-selected={false}
            value="bill"
          >
            Bill
          </option>
          <option
            aria-selected={false}
            value="book"
          >
            Book
          </option>
          <option
            aria-selected={false}
            value="chapter"
          >
            Book Section
          </option>
          <option
            aria-selected={false}
            value="legal_case"
          >
            Case
          </option>
          <option
            aria-selected={false}
            value="paper-conference"
          >
            Conference Proceeding
          </option>
          <option
            aria-selected={false}
            value="entry-encyclopedia"
          >
            Encyclopedia Entry
          </option>
          <option
            aria-selected={false}
            value="motion_picture"
          >
            Film
          </option>
          <option
            aria-selected={false}
            value="speech"
          >
            Hearing
          </option>
          <option
            aria-selected={false}
            value="article-journal"
          >
            Journal Article
          </option>
          <option
            aria-selected={false}
            value="article-magazine"
          >
            Magazine Article
          </option>
          <option
            aria-selected={false}
            value="article-newspaper"
          >
            Newspaper Article
          </option>
          <option
            aria-selected={false}
            value="patent"
          >
            Patent
          </option>
          <option
            aria-selected={false}
            value="testing"
          >
            Test not in use
          </option>
          <option
            aria-selected={false}
            value="testing2"
          >
            Test not in use
          </option>
          <option
            aria-selected={false}
            value="report"
          >
            Report
          </option>
          <option
            aria-selected={false}
            value="legislation"
          >
            Statute
          </option>
          <option
            aria-selected={false}
            value="thesis"
          >
            Thesis
          </option>
          <option
            aria-selected={false}
            value="broadcast"
          >
            Television Broadcast
          </option>
          <option
            aria-selected={true}
            value="webpage"
          >
            Web Page
          </option>
        </select>
      </div>
      <AutoCite
        getter={[Function]}
        kind="webpage"
        placeholder="URL"
      >
        <div
          className="autocite"
        >
          <label
            htmlFor="citequery"
          >
            Autocite
          </label>
          <input
            className="input"
            id="citequery"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="URL"
            type="url"
            value=""
          />
          <Button
            disabled={true}
            flat={true}
            label="Search"
            onClick={[Function]}
            type="button"
          >
            <div>
              <button
                className="btn btnFlat"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </Button>
        </div>
      </AutoCite>
      <div
        className="scrollBoundaryAutocite"
        onWheel={[Function]}
      >
        <Callout
          intent="danger"
          isVisible={true}
          onDismiss={[Function]}
        />
        <ContributorList
          citationType="webpage"
          people={
            Array [
              Object {
                "family": "",
                "given": "",
                "literal": "",
                "type": "author",
              },
            ]
          }
        >
          <h2
            className="heading"
          >
            Contributors
          </h2>
          <Contributor
            contributor={
              Object {
                "family": "",
                "given": "",
                "literal": "",
                "type": "author",
              }
            }
            contributorTypes={
              Array [
                Object {
                  "label": "Author",
                  "type": "author",
                },
              ]
            }
            index={0}
            onRemove={[Function]}
          >
            <div
              className="contributor"
            >
              <select
                data-field="type"
                onChange={[Function]}
                value="author"
              >
                <option
                  aria-selected={true}
                  value="author"
                >
                  Author
                </option>
              </select>
              <input
                aria-label="Surname"
                data-field="family"
                onChange={[Function]}
                placeholder="Surname"
                required={true}
                type="text"
                value=""
              />
              <input
                aria-label="Given Name, M.I."
                data-field="given"
                onChange={[Function]}
                placeholder="Given Name, M.I."
                required={true}
                type="text"
                value=""
              />
              <Button
                flat={true}
                icon="admin-users"
                label="Toggle literal name"
                onClick={[Function]}
                type="button"
              >
                <div>
                  <button
                    aria-label="Toggle literal name"
                    className="btn btnFlat btnIcon"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="dashicons dashicons-admin-users"
                    />
                  </button>
                </div>
              </Button>
              <Button
                data-index={0}
                flat={true}
                icon="no-alt"
                label="Remove contributor"
                onClick={[Function]}
                type="button"
              >
                <div>
                  <button
                    aria-label="Remove contributor"
                    className="btn btnFlat btnIcon"
                    data-index={0}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="dashicons dashicons-no-alt"
                    />
                  </button>
                </div>
              </Button>
            </div>
          </Contributor>
          <div
            className="btnRow"
          >
            <Button
              flat={true}
              label="Add contributor"
              onClick={[Function]}
              type="button"
            >
              <div>
                <button
                  className="btn btnFlat"
                  onClick={[Function]}
                  type="button"
                >
                  Add contributor
                </button>
              </div>
            </Button>
          </div>
        </ContributorList>
        <MetaFields
          meta={
            Object {
              "type": "webpage",
            }
          }
        >
          <h2
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Web Page
          </h2>
          <div
            style={
              Object {
                "display": "table",
                "padding": 10,
                "width": "100%",
              }
            }
          >
            <Field
              field={
                Object {
                  "label": "Content Title",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "title",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="title"
                >
                  Content Title
                </label>
                <input
                  className="input"
                  id="title"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Website Title",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "container-title",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="container-title"
                >
                  Website Title
                </label>
                <input
                  className="input"
                  id="container-title"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "URL",
                  "pattern": ".*",
                  "placeholder": "",
                  "required": true,
                  "value": "URL",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="URL"
                >
                  URL
                </label>
                <input
                  className="input"
                  id="URL"
                  onChange={[Function]}
                  pattern=".*"
                  placeholder=""
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Date",
                  "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
                  "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
                  "required": false,
                  "value": "issued",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="issued"
                >
                  Date
                </label>
                <input
                  className="input"
                  id="issued"
                  onChange={[Function]}
                  pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
                  placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </Field>
            <Field
              field={
                Object {
                  "label": "Date Accessed",
                  "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
                  "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
                  "required": false,
                  "value": "accessed",
                }
              }
              meta={
                Object {
                  "type": "webpage",
                }
              }
              onChange={[Function]}
            >
              <div
                className="row"
              >
                <label
                  className="label"
                  htmlFor="accessed"
                >
                  Date Accessed
                </label>
                <input
                  className="input"
                  id="accessed"
                  onChange={[Function]}
                  pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
                  placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </Field>
          </div>
        </MetaFields>
      </div>
    </ManualInput>
  </form>
  <ButtonRow
    addManually={true}
    attachInline={true}
    isLoading={true}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  >
    <ActionBar>
      <div
        className="actionBar"
      >
        <Button
          flat={true}
          focusable={true}
          label="Add with Identifier"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              onClick={[Function]}
              type="button"
            >
              Add with Identifier
            </button>
          </div>
        </Button>
        <Button
          disabled={true}
          flat={true}
          focusable={true}
          label="Search PubMed"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFocusable btnFlat"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Search PubMed
            </button>
          </div>
        </Button>
        <Component>
          <span
            className="separator"
          />
        </Component>
        <ToggleSwitch
          checked={true}
          disabled={true}
          onChange={[Function]}
          tooltip={
            Object {
              "position": "left",
              "text": "Insert citation inline",
            }
          }
        >
          <div
            className="toggle"
          >
            <Tooltip
              active={false}
              id="inline-toggle"
              text="Insert citation inline"
              transform=""
            >
              <div
                className="tooltip"
                id="inline-toggle"
                role="tooltip"
                style={
                  Object {
                    "transform": "",
                  }
                }
              >
                Insert citation inline
              </div>
            </Tooltip>
            <input
              aria-checked={true}
              aria-describedby="inline-toggle"
              aria-label="Insert citation inline"
              checked={true}
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-checked={true}
              aria-disabled={true}
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="checkbox"
            />
          </div>
        </ToggleSwitch>
        <Button
          focusable={true}
          form="add-reference"
          label="Add Reference"
          primary={true}
          type="submit"
        >
          <div>
            <button
              className="btn btnFocusable btnPrimary"
              form="add-reference"
              type="submit"
            >
              Add Reference
            </button>
          </div>
        </Button>
      </div>
    </ActionBar>
  </ButtonRow>
</AddDialog>
`;
